refactor: Update dependencies and enhance agent plugin functionality
- Updated `go.mod` to include new dependencies for Apache RocketMQ, Confluent Kafka, and RabbitMQ, while removing indirect dependencies.
- Refactored agent service to remove the `FetchTask` RPC method, streamlining task management.
- Introduced `ExecutionType` enumeration in plugin definitions to specify execution methods (SHELL or HTTP).
- Enhanced plugin execution configuration with detailed settings for shell and HTTP executions.
- Updated agent configuration to clarify sandbox runtime settings.
- Removed deprecated example files and improved overall code organization for better maintainability.

--- a/conf.d/agent.toml
+++ b/conf.d/agent.toml
@@ -65,8 +65,8 @@ max_age_days = 30
 [agent.sandbox]
 # enable sandbox, false or true
 enable = true
-# sandbox mode: containerd, kubernetes
-mode = "containerd"
+# sandbox runtime: containerd, kubernetes
+runtime = "containerd"
 
 # containerd configuration
 [agent.sandbox.containerd]
