feat: Enhance version management and repository structure
- Updated the Makefile to include new versioning commands: `version-check` for validating version format and `version-tag` for creating git tags.
- Introduced a structured versioning format (YY.Major.Minor.Patch) and improved version retrieval logic.
- Added new repository methods for managing general settings and roles, including creation, updates, and deletions.
- Refactored agent and user models to streamline data handling and improve clarity.
- Enhanced logging and error handling across various services and repositories for better maintainability.
- Removed obsolete utility functions and files to clean up the codebase.

--- a/conf.d/agent.toml
+++ b/conf.d/agent.toml
@@ -2,7 +2,7 @@
 [grpc]
 # server address (host:port format, e.g., "localhost:9090")
 serverAddr = "localhost:9090"
-# Bearer token for authentication (uses APIkey if not set)
+# Bearer token for authentication
 token = "8EdOp4FC5Khu8SraD6LKQXtG85G0xQYeahsUyCkoxDE="
 # read write timeout (seconds, default: 30)
 readWriteTimeout = 5
@@ -80,7 +80,6 @@ image = "arcade-agent:latest"
 [agent.sandbox.containerd.resources]
 cpu = "1"
 memory = "1G"
-
 
 # kubernetes configuration
 [agent.sandbox.kubernetes]
