feat: Add deployment configurations for arcade and arcade-agent services
- Introduced Kubernetes deployment and service YAML files for the arcade and arcade-agent applications, enabling easier deployment and management in a Kubernetes environment.
- Updated the docker-compose file to include configurations for both services, ensuring they can be run locally with the specified ports and volume mounts.
- Enhanced the CODE_OF_CONDUCT.md to include a mailto link for reporting issues, improving accessibility for community members.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -34,3 +34,27 @@ services:
       - ./mysql/data:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: muP4woo9Aidiph2jeX8u
+      
+  arcade:
+    image: go-arcade/arcade:latest
+    container_name: arcade
+    restart: always
+    ports:
+      - 8080:8080
+      - 9090:9090
+      - 8082:8082
+      - 8083:8083
+    volumes:
+      - ./conf.d:/conf.d
+  
+  arcade-agent:
+    image: go-arcade/arcade-agent:latest
+    container_name: arcade-agent
+    restart: always
+    ports:
+      - 8081:8081
+      - 8084:8084
+      - 8085:8085
+      - 8086:8086
+    volumes:
+      - ./conf.d:/conf.d
