feat: Enhance Redis cache implementation to support cluster mode
- Updated Redis cache interface and implementation to support all modes: single, Sentinel, and cluster.
- Modified configuration files to include cluster mode settings and maximum redirects.
- Refactored Redis client creation to return a Cmdable interface, allowing for better flexibility and compatibility with different Redis modes.
- Improved documentation for methods and configuration options to clarify usage and capabilities.

--- a/conf.d/config.toml
+++ b/conf.d/config.toml
@@ -120,6 +120,7 @@ poolSize = 100
 # support single, cluster, sentinel
 mode = "single"
 # address, ip:port or ip1:port,ip2:port for cluster and sentinel(SentinelAddrs)
+# For cluster mode: address = "127.0.0.1:7000,127.0.0.1:7001,127.0.0.1:7002"
 address = "127.0.0.1:6379"
 password = ""
 db = 0
@@ -129,6 +130,8 @@ poolSize = 50
 #masterName = ""
 #sentinelUsername = ""
 #sentinelPassword = ""
+# maxRedirects: maximum number of redirects for cluster mode (default: 3)
+#maxRedirects = 3
 # dialTimeout
 # unit: second
 dialTimeout = 10
