chore: Update dependencies and add OpenTelemetry tracing support
- Updated various dependencies in go.mod, including major version bumps for google.golang.org/api and google.golang.org/grpc.
- Introduced OpenTelemetry tracing configuration in config.toml, enabling tracing with OTLP exporter.
- Added tracing middleware for Fiber and gRPC, allowing for context propagation and span creation.
- Registered OpenTelemetry hooks for Redis and GORM to enhance observability in database operations.
- Implemented request and real IP middleware to capture request IDs and client IPs for tracing.

--- a/conf.d/config.toml
+++ b/conf.d/config.toml
@@ -18,6 +18,29 @@ port = 8083
 # pprof server request path prefix, default: "/debug/pprof"
 path = "/debug/pprof"
 
+[trace]
+# enable trace, false or true
+enabled = true
+# trace exporter type: "jaeger", "otlp-grpc", "otlp-http", or "none"
+exporterType = "otlp-grpc"
+# trace endpoint
+endpoint = "openobserv.go-arcade.io:4317"
+# trace insecure
+insecure = true
+# trace headers
+headers = {}
+
+# trace batch config
+[trace.batch]
+maxQueueSize = 2048
+# trace batch timeout (duration string, e.g., "5s", "10s", or number as seconds)
+batchTimeout = "5s"
+# trace batch export timeout (duration string, e.g., "30s", "60s", or number as seconds)
+# Increase this if you see "context deadline exceeded" errors
+exportTimeout = "60s"
+# trace batch export size
+maxExportBatchSize = 512
+
 [log]
 # support stdout, file, kafka
 output = "stdout"
